force-app/main/default/objects/Recallable__c/Recallable__c.object-meta.xml
<CustomObject>
    <description>This is a junction object that links a Recall object to an Asset object (Vehicle). The object has two Master-Detail relationships with the objects mentioned above.</description>
    <label>Recalled Asset</label>
    <nameField>
        <displayFormat>RCA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recalled Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>