force-app/main/default/objects/Recallable__c/fields/Recall__c.field-meta.xml
<CustomField>
    <fullName>Recall__c</fullName>
    <label>Recall</label>
    <referenceTo>Recall__c</referenceTo>
    <relationshipName>Recallables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>