force-app/main/default/objects/Recallable__c/fields/Recall_Description__c.field-meta.xml
<CustomField>
    <fullName>Recall_Description__c</fullName>
    <formula>Recall__r.Description__c</formula>
    <label>Recall Description</label>
    <type>Text</type>
</CustomField>