force-app/main/default/objects/Recallable__c/fields/Recall_NHTSA__c.field-meta.xml
<CustomField>
    <fullName>Recall_NHTSA__c</fullName>
    <formula>Recall__r.NHTSA__c</formula>
    <label>Recall NHTSA #</label>
    <type>Text</type>
</CustomField>