force-app/main/default/objects/Recallable__c/fields/Recall_Transport_CA__c.field-meta.xml
<CustomField>
    <fullName>Recall_Transport_CA__c</fullName>
    <formula>Recall__r.TransportCA__c</formula>
    <label>Recall Transport CA #</label>
    <type>Text</type>
</CustomField>