force-app/main/default/objects/Recallable__c/fields/Searchable_VIN_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Searchable_VIN_Serial_Number__c</fullName>
    <description>Used to store last 8 characters of the VIN/SN &amp; aid in searching. Populated by Process Builder.</description>
    <inlineHelpText>Used to store last 8 characters of the VIN/SN &amp; aid in searching. Populated by Process Builder.</inlineHelpText>
    <label>Searchable VIN / Serial Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>