force-app/main/default/objects/Recallable__c/fields/VIN_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>VIN / Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>